resolve fixes